Fixed overlapping modal-containers

--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,17 @@ input[name="message"] {
   visibility: hidden !important; }
 
 /* End Chat Window specific */
+.modal-container {
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 25; }
+
 .modal {
   padding: 20px 40px;
   width: 30%;
@@ -367,16 +378,6 @@ input[name="message"] {
 
 /* End Groups list specific */
 /* Username chooser */
-.modal-container {
-  background-color: rgba(0, 0, 0, 0.75);
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
 .buttons {
   margin-top: 10px; }
 
